<resources>
    <string name="app_name">NatureNotes</string>
    <string name="login_mobile_txt">Continue with Mobile Number and Password</string>
    <string name="register_now_txt">Don\'t have an account? Register  </string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_text_signup_page">Already have an Account? Login</string>
    <string name="otp_sent_msg">Enter 6 Digit OTP sent to %s</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_resend_msg">Don\'t receive the OTP? RESEND OTP</string>
    <string name="otp">OTP</string>
    <string name="project_image">Project Image</string>


    <string name="server_error_title">Internal Server Error</string>
    <string name="server_error_desc">Something went wrong on our end. Sorry about that. \nWe are working on fixing it right now.</string>


    <string name="internet_error_title">No internet Connection!</string>
    <string name="internet_error_desc">No Internet connection found.\nCheck your connection or try again.</string>


    <string name="no_projects_error_title">Oops! No Projects</string>
    <string name="no_projects_error_desc">Looks like there are no ongoing projects here.</string>

    <string name="no_data_error_title">No Data Found</string>
    <string name="no_data_error_desc">No Data Found Here.</string>

    <string name="retry">Retry</string>
    <string name="start">Start</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="gps_location">GPS Location</string>
    <string name="season_name">Season Name</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="habitat">Habitat</string>
    <string name="save_next"><![CDATA[Save & Next]]></string>
    <string name="plot_type">Plot Type</string>
    <string name="plot_area">Plot Area</string>
    <string name="comment">Comment</string>
    <string name="count">Count</string>
    <string name="species">Species</string>
    <string name="add_new_item">Add Item</string>
    <string name="submit">Submit</string>
    <string name="species_list">Species List</string>
    <string name="capture_upload_image"><![CDATA[Capture & Upload Image]]></string>
    <string name="point_number">Point Number</string>
    <string name="landmark">Landmark</string>
    <string name="plot_dimension">Plot Dimension</string>
    <string name="serial_number">Serial Number</string>
    <string name="girth_at_gbh">Girth At GBH</string>
    <string name="approx_height">Approx Height</string>
    <string name="canopy_diameter">Canopy Diameter</string>
    <string name="comments">Comments</string>
    <string name="species_name">Species Name</string>
    <string name="view_failed_entries">View Failed Entries</string>
    <string name="circular">Circular</string>
    <string name="rectangular">Rectangular</string>
    <string name="radius">Radius (Meter)</string>
    <string name="length">Length (Meter)</string>
    <string name="width">Width (Meter)</string>
    <string name="invalid_mobile_number_msg">Please Enter Valid Mobile Number</string>
    <string name="invalid_password_msg">Please Enter Valid Password</string>

    <string name="invalid_name_msg">Please Enter Valid Name</string>
    <string name="invalid_otp_msg">Please Enter Valid OTP</string>
    <string name="account_blocked_msg">Your account has been Blocked</string>
    <string name="project_details">Project Details</string>
    <string name="project_location">"Project Location: %s"</string>
    <string name="project_area">"Project Area: %s"</string>
    <string name="plot_code">Plot Code</string>
    <string name="village">Village</string>
    <string name="new_point">New Point</string>
    <string name="sync_data_with_server">Sync Data With Server</string>
    <string name="confirmation">Confirmation</string>
    <string name="form_submit_msg">Are you sure you want to submit this form?</string>
    <string name="sync_data_msg">Syncing data will require stable internet connection. \nAre you sure you want to continue?</string>

    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="discard_changes_msg">Are you sure you want to Discard these changes?</string>
    <string name="scientific_species_name">Scientific Species Name</string>
    <string name="common_species_name">Common Species Name</string>

    <string-array name="season_names">
        <item>Spring</item>
        <item>Summer</item>
        <item>Monsoon</item>
        <item>Autumn</item>
        <item>Winter</item>
    </string-array>

    <string-array name="weather_condition_names">
        <item>Sunny</item>
        <item>Cloudy</item>
        <item>Clear Sky</item>
        <item>Partially Cloudy</item>
        <item>Overcast</item>
        <item>Raining</item>
        <item>Snowing</item>
        <item>Foggy</item>
        <item>Thunder &amp; Lightning</item>
        <item>Windy</item>
    </string-array>

    <string-array name="habitat_names">
        <item>Woodland</item>
        <item>Forest</item>
        <item>Scrubland/ Grassland</item>
        <item>Cropland</item>
        <item>Barren land</item>
        <item>Open Vegetation</item>
        <item>Built Up</item>
        <item>Wetland</item>
        <item>Coast</item>
<!--        <item>Other</item>-->
    </string-array>
</resources>