<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/basic_page_padding">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_edit_text"
            style="@style/textInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:hint="@string/date"
            android:focusable="false"
            app:startIconDrawable="@drawable/baseline_calendar_month_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_edit_text"
            style="@style/textInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:hint="@string/time"
            android:focusable="false"
            app:startIconDrawable="@drawable/baseline_access_time_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gps_edit_text"
            style="@style/textInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:hint="@string/gps_location"
            android:focusable="false"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/baseline_location_on_24"
            app:endIconDrawable="@drawable/baseline_refresh_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/point_number_edit_text"
            style="@style/textInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:hint="@string/point_number"
            app:startIconDrawable="@drawable/baseline_123_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/landmark_edit_text"
            style="@style/textInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:hint="@string/landmark"
            app:startIconDrawable="@drawable/baseline_landscape_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plot_type_edit_text"
            style="@style/textInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:hint="@string/plot_type"
            app:startIconDrawable="@drawable/baseline_category_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plot_dimension_edit_text"
            style="@style/textInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:hint="@string/plot_dimension"
            app:startIconDrawable="@drawable/baseline_design_services_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/habitat_edit_text"
            style="@style/textInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:hint="@string/habitat"
            app:startIconDrawable="@drawable/baseline_forest_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_40"
            android:background="@drawable/rounded_button"
            android:insetLeft="@dimen/padding_30"
            android:insetRight="@dimen/padding_30"
            android:text="@string/save_next"
            android:textAppearance="@style/basicButtonStyle" />


    </LinearLayout>
    </ScrollView>
</LinearLayout>